prow/test/integration/prow/cluster/100_starter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-pods
---
apiVersion: v1
kind: Secret
metadata:
  namespace: default
  name: oauth-token
data:
  oauth: ZmFrZW9hdXRodG9rZW4K # From 'fakeoauthtoken'
---
apiVersion: v1
kind: Secret
metadata:
  namespace: default
  name: kubeconfig
stringData:
  config: ""
