prow/test/integration/prow/cluster/200_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Rewrite path to strip /fakeghserver from path to match in cluster traffic.
    # Doc: https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/rewrite/README.md#rewrite-target
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ghserver-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /fakeghserver(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: fakeghserver
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hook
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /hook
        pathType: Prefix
        backend:
          service:
            name: hook
            port:
              number: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deck
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /deck(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: deck
            port:
              number: 80
      - path: /deck-tenanted(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: deck-tenanted
            port:
              number: 80
