prow/test/integration/prow/cluster/crier_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: crier
  labels:
    app: crier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crier
  template:
    metadata:
      labels:
        app: crier
    spec:
      serviceAccountName: crier
      terminationGracePeriodSeconds: 30
      containers:
      - name: crier
        image: localhost:5001/crier
        args:
        - --config-path=/etc/config/config.yaml
        - --github-endpoint=http://fakeghserver
        - --github-token-path=/etc/github/oauth
        - --github-workers=1
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: oauth
        secret:
          secretName: oauth-token
