prow/test/integration/prow/cluster/fakegerritserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: fakegerritserver
  labels:
    app: fakegerritserver
spec:
  selector:
    matchLabels:
      app: fakegerritserver
  replicas: 1
  template:
    metadata:
      labels:
        app: fakegerritserver
    spec:
      containers:
      - name: fakegerritserver
        image: localhost:5001/fakegerritserver
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fakegerritserver
  namespace: default
  name: fakegerritserver
spec:
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: 8888
  - name: metrics
    port: 9090
    protocol: TCP
  selector:
    app: fakegerritserver
  type: ClusterIP
